# HovverAdminDashboard

./: .gitignore  ARCHITECTURE_DIAGRAM.md  ASSUME_ROLE_README.md  CORS_ERROR_FIXED.txt  CORS_FIX_COMPLETE.md  CORS_STATUS.md  CROSS_ACCOUNT_HTTPS_SETUP.md  CUSTOMER_CREATION_EXAMPLES.md  CUSTOMER_EMAIL_SETUP.md  CUSTOMER_FILES_FILTER_ISSUE.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_MODES.md  DNS_CLEANUP_REPORT.txt  DNS_PROPAGATION_STATUS.md  DNS_TIMEOUT_EXPLANATION.txt  Dockerfile  Dockerfile.lambda  EMAIL_LINK_ADDED.txt  EMAIL_QUICK_REFERENCE.txt  FILTER_FIX_QUICK_REF.txt  FINAL_DIAGNOSIS.txt  FINAL_STATUS_REPORT.txt  Hovver-Admin-Dashboard.postman_collection.json  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUCCESS.txt  POSTMAN_UPDATE_COMPLETE.txt  QUICK_DEPLOY.md  QUICK_REFERENCE.txt  README.md  RESEND_EMAIL_SECURITY_VERIFICATION.txt  RESEND_SECURITY_FLOW_DIAGRAM.txt  RESEND_SECURITY_SUMMARY.txt  RESEND_WELCOME_EMAIL.md  RESEND_WELCOME_QUICKREF.md  RESEND_WELCOME_SECURITY_UPDATE.md  S3_HTTPS_VERIFICATION.md  SECURITY_CHECK_COMPLETE.txt  SECURITY_UPDATE_SUMMARY.md  SES_ACCOUNT_MIGRATION_GUIDE.txt  SES_DNS_ISSUE_RESOLVED.txt  (+42 more)
api/: __init__.py
api/models/: __init__.py
api/routers/: __init__.py  auth.py  customers.py  images.py
api/services/: __init__.py  auth.py  email.py  s3.py
templates/: admin_welcome.html  customer_welcome.html
terraform/: README.md  acm_certificate.tf  alb.tf  cloudwatch.tf  cognito.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  route53.tf  s3.tf  terr.out  terraform.tfvars.example  tfplan  variables.tf  vpc.tf
